quick_tests/cases/pass/p19_return_with_function_call.webx
fn get_value() -> i32 { return 30; }
fn main() -> i32 {
    return get_value();
}