quick_tests/cases/fail/f23_missing_return_type_arrow_in_nested_function.webx
fn main() -> i32 { fn inner() { return 0; } }